kubernetes/local/n8n-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-svc
  labels:
    service: n8n
  namespace: n8n
spec:
  type: ClusterIP
  selector:
    app: n8n
  ports:
    - name: "5678"
      port: 5678
      targetPort: 5678
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: n8n.127-0-0-1.sslip.io
      https:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n-svc
                port:
                  number: 5678
    - host: n8n.127-0-0-1.sslip.io
      tls:
        cipher_suites:
          - TLSv1.2
          - TLSv1.3
